# krachlicht

./: .gitignore  Cargo.toml  build.rs  krachlicht.sample.toml  readme.md
.github/workflows/: build-test.yml
src/: audiosource.rs  intervaltimer.rs  main.rs  mqtt.rs  olaoutput.rs  osc.rs  oscoutput.rs  photonizer.rs  playbackstate.rs  pulseinput.rs  sdlplayer.rs  ui.rs
src/effects/: lightbar.rs  mod.rs  pixelflow.rs  staticcolor.rs  thunderstruck.rs
