[package]
name = "krachlicht"
version = "0.1.0"
authors = ["Marcel Kummer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
config-file = "0.2.*"
ctrlc = "3.4.*"
dft = "0.5.*"
env_logger = "0.9.*"
json = "0.12.*"
log = "0.4.*"
rand = "0.8.*"
sdl2 = "0.35.*"
serde = { version = "1.0.*", features = ["derive"] }
paho-mqtt = "0.11.*"
palette = "0.7.*"
pulse-simple = "1.0.*"
rosc = "0.5.*"
